--- a/package/lean/autocore/Makefile
+++ b/package/lean/autocore/Makefile
@@ -28,8 +28,8 @@ define Build/Compile
 endef
 
 define Package/autocore/install
-	$(INSTALL_DIR) $(1)/etc/init.d
-	$(INSTALL_BIN) ./files/autocore $(1)/etc/init.d/autocore
+#	$(INSTALL_DIR) $(1)/etc/init.d
+#	$(INSTALL_BIN) ./files/autocore $(1)/etc/init.d/autocore
 	$(INSTALL_DIR) $(1)/etc
 	$(INSTALL_DATA) ./files/index.htm $(1)/etc/index.htm
 endef
