--- a/package/hong/luci-app-softwarecenter/Makefile
+++ b/package/hong/luci-app-softwarecenter/Makefile
@@ -7,19 +7,12 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI Support for Software Center
-PKG_NAME:=luci-app-softwarecenter
-LUCI_PKGARCH:=all
-LUCI_DEPENDS:=
+LUCI_DEPENDS:=+softwarecenter
 PKG_VERSION:=1.0.6
 
-define Package/$(PKG_NAME)/postinst
-#!/bin/sh
-chmod 755 $${IPKG_INSTROOT}/usr/bin/softwarecenter/*.sh  >/dev/null 2>&1
-chmod 755 $${IPKG_INSTROOT}/etc/init.d/softwarecenter  >/dev/null 2>&1
-/etc/init.d/softwarecenter enable >/dev/null 2>&1
-exit 0
-endef
+PKG_MAINTAINER:=Jianpeng Xiang <1505020109@mail.hnust.edu.cn>
+PKG_LICENSE:=GPLv3
 
-include $(TOPDIR)/feeds/luci/luci.mk
+include ../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
