--- a/package/hong/luci-app-softwarecenter/Makefile
+++ b/package/hong/luci-app-softwarecenter/Makefile
@@ -13,6 +13,6 @@ PKG_VERSION:=1.0.6
 PKG_MAINTAINER:=Jianpeng Xiang <1505020109@mail.hnust.edu.cn>
 PKG_LICENSE:=GPLv3
 
-include ../luci.mk
+include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
