--- a/package/hong/rblibtorrent/Makefile
+++ b/package/hong/rblibtorrent/Makefile
@@ -24,7 +24,7 @@ define Package/rblibtorrent
   CATEGORY:=Libraries
   TITLE:=Rasterbar BitTorrent library
   URL:=https://www.libtorrent.org/
-  DEPENDS:=+libstdcpp +libopenssl +boost +boost-system +boost-chrono +boost-random
+  DEPENDS:=+boost-chrono +boost-python +boost-random +boost-system +libopenssl
   MAINTAINER:=Arvid Norberg <arvid@libtorrent.org>
 endef
 
@@ -46,7 +46,9 @@ CONFIGURE_ARGS += \
 	--enable-static \
 	--disable-debug \
 	--enable-encryption \
-	--with-boost=$(STAGING_DIR)/usr
+	--with-openssl=$(STAGING_DIR)/usr \
+	--with-boost-libdir=$(STAGING_DIR)/usr/lib \
+	--with-boost=$(STAGING_DIR)/usr \
 
 define Build/Configure
 	cd $(PKG_BUILD_DIR) ; \
@@ -58,14 +60,14 @@ define Build/InstallDev
 	$(INSTALL_DIR) $(1)/usr/include
 	$(CP) $(PKG_INSTALL_DIR)/usr/include/libtorrent $(1)/usr/include/
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libtorrent-rasterbar.{a,so*} $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/*.so* $(1)/usr/lib/
 	$(INSTALL_DIR) $(1)/usr/lib/pkgconfig
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/pkgconfig/libtorrent-rasterbar.pc $(1)/usr/lib/pkgconfig/
 endef
 
 define Package/rblibtorrent/install
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libtorrent-rasterbar.so.* $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/*.so* $(1)/usr/lib/
 endef
 
 $(eval $(call BuildPackage,rblibtorrent))
