--- a/package/hong/open-app-filter/Makefile
+++ b/package/hong/open-app-filter/Makefile
@@ -11,8 +11,8 @@ include $(INCLUDE_DIR)/package.mk
 #include $(INCLUDE_DIR)/kernel.mk
 
 define Package/appfilter
-  SECTION:=Derry Apps
-  CATEGORY:=Derry Apps
+  SECTION:=net
+  CATEGORY:=Network
   TITLE:=App filter userspace module
 endef
 
