--- a/package/hong/luci-app-filetransfer-GT/Makefile
+++ b/package/hong/luci-app-filetransfer-GT/Makefile
@@ -7,7 +7,8 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI page for IPK upload
-LUCI_DEPENDS:=+luci-lib-fs
+LUCI_PKGARCH:=all
+LUCI_DEPENDS:=+luci-lib-fs +kmod-oaf +appfilter
 PKG_VERSION:=1
 PKG_RELEASE:=2
 
