--- a/package/hong/luci-app-filetransfer-GT/Makefile
+++ b/package/hong/luci-app-filetransfer-GT/Makefile
@@ -8,7 +8,7 @@ include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI page for IPK upload
 LUCI_PKGARCH:=all
-LUCI_DEPENDS:=+luci-lib-fs +kmod-oaf +appfilter
+LUCI_DEPENDS:=+luci-lib-fs
 PKG_VERSION:=1
 PKG_RELEASE:=2
 
