--- a/package/lean/luci-app-baidupcs-web/Makefile
+++ b/package/lean/luci-app-baidupcs-web/Makefile
@@ -6,7 +6,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI Support for BaiduPCS-Web
-LUCI_DEPENDS:=+BaiduPCS-Web +wget +openssl-util
+LUCI_DEPENDS:=+baiduPCS-Web +wget +openssl-util
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.0
 PKG_RELEASE:=1
