--- a/package/hong/qBittorrent/Makefile
+++ b/package/hong/qBittorrent/Makefile
@@ -1,19 +1,21 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=qBittorrent
+PKG_VERSION:=4.1.0
 #PKG_VERSION:=4.1.3
 #PKG_VERSION:=4.1.5
 #PKG_VERSION:=4.1.7
-PKG_VERSION:=4.1.8
+#PKG_VERSION:=4.1.8
 PKG_RELEASE=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/qbittorrent/qBittorrent.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE_VERSION:=e9ed621178af841114a045887c5ce1e6b50cb366
 #PKG_SOURCE_VERSION:=a574c4a70a5a3293d2f6135952c301d930d23627
 #PKG_SOURCE_VERSION:=3f0e0a319a6f4833b238842744ed1f37104fcd4c
 #PKG_SOURCE_VERSION:=05a82afeb6c927bfc0cda4fe8fb25ecc3faecd86
-PKG_SOURCE_VERSION:=359b4649583564407628ebdac234a71c2f25e4dc
+#PKG_SOURCE_VERSION:=359b4649583564407628ebdac234a71c2f25e4dc
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPL-2.0+
