--- a/package/hong/luci-app-serverchan/Makefile
+++ b/package/hong/luci-app-serverchan/Makefile
@@ -14,12 +14,12 @@ PKG_RELEASE:=40
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
-define Package/$(PKG_NAME)/postinst
+#define Package/$(PKG_NAME)/postinst
 #!/bin/sh
-chmod 0755 /etc/init.d/serverchan
-chmod 0755 /usr/bin/serverchan/serverchan
-/etc/init.d/serverchan enable >/dev/null 2>&1
-exit 0
-endef
+#chmod 0755 /etc/init.d/serverchan
+#chmod 0755 /usr/bin/serverchan/serverchan
+#/etc/init.d/serverchan enable >/dev/null 2>&1
+#exit 0
+#endef
 
 # call BuildPackage - OpenWrt buildroot signature
