--- a/package/lean/autocore/Makefile
+++ b/package/lean/autocore/Makefile
@@ -28,10 +28,10 @@ define Build/Compile
 endef
 
 define Package/autocore/install
-#	$(INSTALL_DIR) $(1)/etc/init.d
-#	$(INSTALL_BIN) ./files/autocore $(1)/etc/init.d/autocore
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/view/admin_status
-	$(INSTALL_DATA) ./files/index.htm $(1)/usr/lib/lua/luci/view/admin_status/index.htm
+	$(INSTALL_DIR) $(1)/etc/init.d
+	$(INSTALL_BIN) ./files/autocore $(1)/etc/init.d/autocore
+	$(INSTALL_DIR) $(1)/etc
+	$(INSTALL_DATA) ./files/index.htm $(1)/etc/index.htm
 endef
 
 $(eval $(call BuildPackage,autocore))
