--- a/package/hong/luci-app-clash/Makefile
+++ b/package/hong/luci-app-clash/Makefile
@@ -1,17 +1,176 @@
-include $(TOPDIR)/rules.mk
+include $(TOPDIR)/rules.mk 
 
 PKG_NAME:=luci-app-clash
-LUCI_DEPENDS:=+bash +coreutils-nohup +wget
-PKG_VERSION:=0.31.0
-PKG_RELEASE:=1
+PKG_VERSION:=1.2.2
+PKG_RELEASE:=2
 PKG_MAINTAINER:=frainzy1477
 
 
-define Package/$(PKG_NAME)/postinst
-#!/bin/sh
-rm -rf /tmp/luci*
+include $(INCLUDE_DIR)/package.mk
+
+define Package/luci-app-clash
+	SECTION:=luci
+	CATEGORY:=LuCI
+	SUBMENU:=2. Clash
+	TITLE:=LuCI app for clash
+	DEPENDS:=+luci +luci-base +wget +iptables +coreutils-base64 +coreutils +coreutils-nohup +bash +ipset +libustream-openssl +libopenssl +openssl-util
+	PKGARCH:=all
+	MAINTAINER:=frainzy1477
 endef
 
-include $(TOPDIR)/feeds/luci/luci.mk
+define Package/luci-app-clash/description
+	Luci Interface for clash.
+endef
 
-# call BuildPackage - OpenWrt buildroot signature
+
+define Build/Prepare
+	chmod 777 -R ${CURDIR}/tools/po2lmo
+	${CURDIR}/tools/po2lmo/src/po2lmo ${CURDIR}/po/zh-cn/clash.po ${CURDIR}/po/zh-cn/clash.zh-cn.lmo
+
+endef
+
+define Build/Configure
+endef
+
+define Build/Compile
+endef
+
+define Package/$(PKG_NAME)/preinst
+#!/bin/sh
+
+
+if [ -f "/tmp/dnsmasq.d/custom_list.conf" ]; then
+	rm -rf /tmp/dnsmasq.d/custom_list.conf 2>/dev/null
+fi
+
+if [ -d "/tmp/dnsmasq.clash" ]; then
+	rm -rf /tmp/dnsmasq.clash 2>/dev/null
+fi
+
+if [ -f "/etc/config/clash" ]; then
+	mv /etc/config/clash /etc/config/clash.bak 2>/dev/null
+fi
+
+if [ -d "/usr/lib/lua/luci/model/cbi/clash" ]; then
+	rm -rf /usr/lib/lua/luci/model/cbi/clash 2>/dev/null
+fi	
+
+if [ -d "/usr/lib/lua/luci/view/clash" ]; then
+	rm -rf /usr/lib/lua/luci/view/clash 2>/dev/null
+fi
+
+if [ -f /usr/share/clash/new_core_version ]; then
+	rm -rf /usr/share/clash/new_core_version 2>/dev/null
+fi
+
+if [ -f /usr/share/clash/new_luci_version ]; then
+	rm -rf /usr/share/clash/new_luci_version 2>/dev/null
+fi
+
+if [  -d /usr/share/clash/web ]; then
+	rm -rf /usr/share/clash/web 2>/dev/null
+fi
+
+if [  -f /usr/share/clash/config/sub/config.yaml ] && [ "$(ls -l /usr/share/clash/config/sub/config.yaml | awk '{print int($5/1024)}')" -ne 0 ];then
+	mv /usr/share/clash/config/sub/config.yaml /usr/share/clash/config/sub/config.bak 2>/dev/null
+fi
+
+if [  -f /usr/share/clash/config/upload/config.yaml ] && [ "$(ls -l /usr/share/clash/config/upload/config.yaml | awk '{print int($5/1024)}')" -ne 0 ];then
+	mv /usr/share/clash/config/upload/config.yaml /usr/share/clash/config/upload/config.bak 2>/dev/null
+fi
+ 
+if [  -f /usr/share/clash/config/custom/config.yaml ] && [ "$(ls -l /usr/share/clash/config/custom/config.yaml | awk '{print int($5/1024)}')" -ne 0 ];then
+	mv /usr/share/clash/config/custom/config.yaml /usr/share/clash/config/custom/config.bak 2>/dev/null
+fi
+
+
+
+endef
+
+define Package/$(PKG_NAME)/postinst
+#!/bin/sh
+rm -rf /tmp/luci*  
+
+if [ -f "/etc/config/clash.bak" ]; then
+	mv /etc/config/clash.bak /etc/config/clash 2>/dev/null
+fi
+
+if [  -f /usr/share/clash/config/sub/config.bak ];then
+	mv /usr/share/clash/config/sub/config.bak /usr/share/clash/config/sub/config.yaml 2>/dev/null
+fi
+
+if [  -f /usr/share/clash/config/upload/config.bak ];then
+	mv /usr/share/clash/config/upload/config.bak /usr/share/clash/config/upload/config.yaml 2>/dev/null
+fi
+ 
+if [  -f /usr/share/clash/config/custom/config.bak ];then
+	mv /usr/share/clash/config/custom/config.bak /usr/share/clash/config/custom/config.yaml 2>/dev/null
+fi
+
+endef
+
+define Package/$(PKG_NAME)/install
+	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/controller
+	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/model/cbi/clash
+	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/view/clash
+	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
+	$(INSTALL_DIR) $(1)/etc/init.d
+	$(INSTALL_DIR) $(1)/etc/config
+	$(INSTALL_DIR) $(1)/etc/clash
+	$(INSTALL_DIR) $(1)/usr/lib/lua/luci
+	$(INSTALL_DIR) $(1)/usr/share/
+	$(INSTALL_DIR) $(1)/usr/share/clash
+	$(INSTALL_DIR) $(1)/usr/share/clash/yac
+	$(INSTALL_DIR) $(1)/usr/share/clash/dashboard
+	$(INSTALL_DIR) $(1)/usr/share/clash/dashboard/img
+	$(INSTALL_DIR) $(1)/usr/share/clash/dashboard/js
+	
+	$(INSTALL_DIR) $(1)/usr/share/clash/config
+	$(INSTALL_DIR) $(1)/usr/share/clash/config/sub
+	$(INSTALL_DIR) $(1)/usr/share/clash/config/upload
+	$(INSTALL_DIR) $(1)/usr/share/clash/config/custom
+	
+	$(INSTALL_BIN) ./root/usr/share/clash/config/upload/config.yaml $(1)/usr/share/clash/config/upload/
+	$(INSTALL_BIN) ./root/usr/share/clash/config/custom/config.yaml $(1)/usr/share/clash/config/custom/
+	$(INSTALL_BIN) ./root/usr/share/clash/config/sub/config.yaml $(1)/usr/share/clash/config/sub/
+
+	$(INSTALL_BIN) 	./root/etc/init.d/clash $(1)/etc/init.d/clash
+	$(INSTALL_CONF) ./root/etc/config/clash $(1)/etc/config/clash
+	$(INSTALL_CONF) ./root/etc/clash/* $(1)/etc/clash/
+
+	$(INSTALL_BIN) ./root/usr/share/clash/clash-watchdog.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/clash.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/ipdb.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/get_proxy.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/proxy.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/dns.yaml $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/custom_rule.yaml $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/luci_version $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/check_luci_version.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/check_core_version.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/yum_change.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/groups.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/rule.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/list.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/v2ssr.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/upl.sh $(1)/usr/share/clash/
+	$(INSTALL_BIN) ./root/usr/share/clash/server.list $(1)/usr/share/clash/
+
+	$(INSTALL_BIN) ./root/usr/share/clash/yac/* $(1)/usr/share/clash/yac/
+	$(INSTALL_BIN) ./root/usr/share/clash/dashboard/index.html $(1)/usr/share/clash/dashboard/
+	$(INSTALL_BIN) ./root/usr/share/clash/dashboard/main.170828c7fe0d9a5948a7.css $(1)/usr/share/clash/dashboard/
+	$(INSTALL_BIN) ./root/usr/share/clash/dashboard/img/33343e6117c37aaef8886179007ba6b5.png $(1)/usr/share/clash/dashboard/img/
+	$(INSTALL_BIN) ./root/usr/share/clash/dashboard/js/1.bundle.170828c7fe0d9a5948a7.min.js $(1)/usr/share/clash/dashboard/js/
+	$(INSTALL_BIN) ./root/usr/share/clash/dashboard/js/bundle.170828c7fe0d9a5948a7.min.js $(1)/usr/share/clash/dashboard/js/
+        
+	$(INSTALL_DATA) ./luasrc/clash.lua $(1)/usr/lib/lua/luci/
+	$(INSTALL_DATA) ./luasrc/controller/*.lua $(1)/usr/lib/lua/luci/controller/
+	$(INSTALL_DATA) ./luasrc/model/cbi/clash/*.lua $(1)/usr/lib/lua/luci/model/cbi/clash/
+	$(INSTALL_DATA) ./luasrc/view/clash/* $(1)/usr/lib/lua/luci/view/clash/
+	$(INSTALL_DATA) ./po/zh-cn/clash.zh-cn.lmo $(1)/usr/lib/lua/luci/i18n/
+	
+endef
+
+
+
+$(eval $(call BuildPackage,$(PKG_NAME)))
