--- a/package/hong/luci-app-cpulimit/Makefile
+++ b/package/hong/luci-app-cpulimit/Makefile
@@ -2,6 +2,8 @@ include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for cpu limit setting
 LUCI_PKGARCH:=all
+PKG_VERSION:=1.0
+PKG_RELEASE:=2
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
