--- a/package/lean/rblibtorrent/Makefile
+++ b/package/lean/rblibtorrent/Makefile
@@ -16,6 +16,7 @@ PKG_LICENSE:=BSD
 PKG_LICENSE_FILES:=COPYING
 
 PKG_USE_MIPS16:=0
+PKG_FIXUP:=autoreconf libtool
 PKG_BUILD_PARALLEL:=1
 PKG_INSTALL:=1
 
@@ -26,7 +27,7 @@ define Package/rblibtorrent
   CATEGORY:=Libraries
   TITLE:=Rasterbar BitTorrent library
   URL:=https://www.libtorrent.org/
-  DEPENDS:=+libstdcpp +libopenssl +boost +boost-system +boost-chrono +boost-random
+  DEPENDS:=+libstdcpp +libopenssl +boost +boost-system +boost-chrono +boost-random +zlib
   MAINTAINER:=Arvid Norberg <arvid@libtorrent.org>
 endef
 
@@ -48,7 +49,8 @@ CONFIGURE_ARGS += \
 	--enable-static \
 	--disable-debug \
 	--enable-encryption \
-	--with-boost=$(STAGING_DIR)/usr
+	--with-boost=$(STAGING_DIR)/usr \
+	--with-boost-libdir=$(STAGING_DIR)/usr/lib 
 
 define Build/Configure
 	cd $(PKG_BUILD_DIR) ; \
@@ -60,14 +62,14 @@ define Build/InstallDev
 	$(INSTALL_DIR) $(1)/usr/include
 	$(CP) $(PKG_INSTALL_DIR)/usr/include/libtorrent $(1)/usr/include/
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libtorrent-rasterbar.{a,so*} $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/*.so* $(1)/usr/lib/
 	$(INSTALL_DIR) $(1)/usr/lib/pkgconfig
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/pkgconfig/libtorrent-rasterbar.pc $(1)/usr/lib/pkgconfig/
 endef
 
 define Package/rblibtorrent/install
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libtorrent-rasterbar.so.* $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/*.so* $(1)/usr/lib/
 endef
 
 $(eval $(call BuildPackage,rblibtorrent))
