--- a/package/lean/qBittorrent/Makefile
+++ b/package/lean/qBittorrent/Makefile
@@ -5,7 +5,8 @@ PKG_NAME:=qBittorrent
 #PKG_VERSION:=4.1.3
 #PKG_VERSION:=4.1.5
 #PKG_VERSION:=4.1.7
-PKG_VERSION:=4.1.8
+#PKG_VERSION:=4.1.8
+PKG_VERSION:=4.1.9
 PKG_RELEASE=1
 
 PKG_SOURCE_PROTO:=git
@@ -15,7 +16,8 @@ PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 #PKG_SOURCE_VERSION:=a574c4a70a5a3293d2f6135952c301d930d23627
 #PKG_SOURCE_VERSION:=3f0e0a319a6f4833b238842744ed1f37104fcd4c
 #PKG_SOURCE_VERSION:=05a82afeb6c927bfc0cda4fe8fb25ecc3faecd86
-PKG_SOURCE_VERSION:=0de5cbaa4becf4eb89245324cb76c9a7c9412a33
+#PKG_SOURCE_VERSION:=0de5cbaa4becf4eb89245324cb76c9a7c9412a33
+PKG_SOURCE_VERSION:=7825d8627f8be4682167bbe091870edad9dc33b6
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPL-2.0+
