--- a/package/lean/luci-app-ssr-plus/root/etc/dnsmasq.ssr/gfw_list.conf
+++ b/package/lean/luci-app-ssr-plus/root/etc/dnsmasq.ssr/gfw_list.conf
@@ -74,6 +74,8 @@ server=/.2008xianzhang.info/127.0.0.1#5335
 ipset=/.2008xianzhang.info/gfwlist
 server=/.2017.hk/127.0.0.1#5335
 ipset=/.2017.hk/gfwlist
+server=/.21join.com/127.0.0.1#5335
+ipset=/.21join.com/gfwlist
 server=/.21pron.com/127.0.0.1#5335
 ipset=/.21pron.com/gfwlist
 server=/.21sextury.com/127.0.0.1#5335
@@ -2168,6 +2170,8 @@ server=/.demo.opera-mini.net/127.0.0.1#5335
 ipset=/.demo.opera-mini.net/gfwlist
 server=/.democrats.org/127.0.0.1#5335
 ipset=/.democrats.org/gfwlist
+server=/.demosisto.hk/127.0.0.1#5335
+ipset=/.demosisto.hk/gfwlist
 server=/.depositphotos.com/127.0.0.1#5335
 ipset=/.depositphotos.com/gfwlist
 server=/.derekhsu.homeip.net/127.0.0.1#5335
@@ -2870,6 +2874,8 @@ server=/.fanhaodang.com/127.0.0.1#5335
 ipset=/.fanhaodang.com/gfwlist
 server=/.fanqiang.tk/127.0.0.1#5335
 ipset=/.fanqiang.tk/gfwlist
+server=/.fanqiangdang.com/127.0.0.1#5335
+ipset=/.fanqiangdang.com/gfwlist
 server=/.fanqianghou.com/127.0.0.1#5335
 ipset=/.fanqianghou.com/gfwlist
 server=/.fanqiangyakexi.net/127.0.0.1#5335
@@ -3162,6 +3168,8 @@ server=/.freefuckvids.com/127.0.0.1#5335
 ipset=/.freefuckvids.com/gfwlist
 server=/.freegao.com/127.0.0.1#5335
 ipset=/.freegao.com/gfwlist
+server=/.freehongkong.org/127.0.0.1#5335
+ipset=/.freehongkong.org/gfwlist
 server=/.freeilhamtohti.org/127.0.0.1#5335
 ipset=/.freeilhamtohti.org/gfwlist
 server=/.freekwonpyong.org/127.0.0.1#5335
@@ -6262,6 +6270,8 @@ server=/.ny.visiontimes.com/127.0.0.1#5335
 ipset=/.ny.visiontimes.com/gfwlist
 server=/.nyaa.eu/127.0.0.1#5335
 ipset=/.nyaa.eu/gfwlist
+server=/.nyaa.si/127.0.0.1#5335
+ipset=/.nyaa.si/gfwlist
 server=/.nydus.ca/127.0.0.1#5335
 ipset=/.nydus.ca/gfwlist
 server=/.nylon-angel.com/127.0.0.1#5335
@@ -7050,6 +7060,8 @@ server=/.rapidmoviez.com/127.0.0.1#5335
 ipset=/.rapidmoviez.com/gfwlist
 server=/.rapidvpn.com/127.0.0.1#5335
 ipset=/.rapidvpn.com/gfwlist
+server=/.rarbgprx.org/127.0.0.1#5335
+ipset=/.rarbgprx.org/gfwlist
 server=/.raremovie.cc/127.0.0.1#5335
 ipset=/.raremovie.cc/gfwlist
 server=/.raremovie.net/127.0.0.1#5335
@@ -9024,6 +9036,8 @@ server=/.tycool.com/127.0.0.1#5335
 ipset=/.tycool.com/gfwlist
 server=/.typepad.com/127.0.0.1#5335
 ipset=/.typepad.com/gfwlist
+server=/.u15.info/127.0.0.1#5335
+ipset=/.u15.info/gfwlist
 server=/.u9un.com/127.0.0.1#5335
 ipset=/.u9un.com/gfwlist
 server=/.ub0.cc/127.0.0.1#5335
@@ -10116,6 +10130,8 @@ server=/.yibaochina.com/127.0.0.1#5335
 ipset=/.yibaochina.com/gfwlist
 server=/.yidio.com/127.0.0.1#5335
 ipset=/.yidio.com/gfwlist
+server=/.yigeni.com/127.0.0.1#5335
+ipset=/.yigeni.com/gfwlist
 server=/.yilubbs.com/127.0.0.1#5335
 ipset=/.yilubbs.com/gfwlist
 server=/.yingsuoss.com/127.0.0.1#5335
