--- a/package/lean/luci-app-filetransfer/Makefile
+++ b/package/lean/luci-app-filetransfer/Makefile
@@ -7,6 +7,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI page for IPK upload
+LUCI_PKGARCH:=all
 LUCI_DEPENDS:=+luci-lib-fs
 PKG_VERSION:=1
 PKG_RELEASE:=2
@@ -14,5 +15,4 @@ PKG_RELEASE:=2
 include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
-
 
