--- a/package/lean/qt5/Makefile
+++ b/package/lean/qt5/Makefile
@@ -106,6 +106,7 @@ define Build/Configure
 			-no-iconv \
 			-no-pch \
 			-no-rpath \
+			-no-qml-debug \
 			-no-strip \
 			-no-cups \
 			-no-dbus \
@@ -114,7 +115,7 @@ define Build/Configure
 			-no-opengl \
 			-no-directfb \
 			-no-xcb \
-			-openssl-runtime \
+			-no-ssl \
 			-qt-zlib \
 			-qt-pcre \
 			-qt-freetype \
