--- a/package/hong/luci-app-serverchan/Makefile
+++ b/package/hong/luci-app-serverchan/Makefile
@@ -15,7 +15,7 @@ PKG_RELEASE:=40
 include $(TOPDIR)/feeds/luci/luci.mk
 
 define Package/$(PKG_NAME)/postinst
-!/bin/sh
+#!/bin/sh
 chmod 0755 /etc/init.d/serverchan
 chmod 0755 /usr/bin/serverchan/serverchan
 /etc/init.d/serverchan enable >/dev/null 2>&1
