--- a/package/lean/luci-app-unblockmusic/Makefile
+++ b/package/lean/luci-app-unblockmusic/Makefile
@@ -16,7 +16,7 @@ PKG_RELEASE:=9
 PKG_LICENSE:=Apache-2.0
 
 LUCI_TITLE:=LuCI support for Unblock NeteaseCloudMusic
-LUCI_DEPENDS:=+unblockNeteaseMusic +bash +dnsmasq-full +ipset
+LUCI_DEPENDS:=+UnblockNeteaseMusic +bash +dnsmasq-full +ipset
 LUCI_PKGARCH:=all
 
 PKG_MAINTAINER:=lean
