--- a/package/hong/luci-app-appfilter/Makefile
+++ b/package/hong/luci-app-appfilter/Makefile
@@ -6,10 +6,11 @@ include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=Open App Filter Module
 LUCI_PKGARCH:=all
+LUCI_DEPENDS:=+appfilter
 PKG_NAME:=luci-app-appfilter
 PKG_VERSION:=1.0
 PKG_RELEASE:=1
-LUCI_DEPENDS:=+kmod-oaf +appfilter
+
 
 include $(TOPDIR)/feeds/luci/luci.mk
 # call BuildPackage - OpenWrt buildroot signature
