--- a/package/lean/qt5/Makefile
+++ b/package/lean/qt5/Makefile
@@ -115,7 +115,7 @@ define Build/Configure
 			-no-opengl \
 			-no-directfb \
 			-no-xcb \
-			-no-ssl
+			-no-ssl \
 			-qt-zlib \
 			-qt-pcre \
 			-qt-freetype \
