--- a/package/lean/qBittorrent/Makefile
+++ b/package/lean/qBittorrent/Makefile
@@ -7,7 +7,8 @@ PKG_NAME:=qBittorrent
 #PKG_VERSION:=4.1.7
 #PKG_VERSION:=4.1.8
 #PKG_VERSION:=4.1.9.1
-PKG_VERSION:=4.1.9
+#PKG_VERSION:=4.1.9
+PKG_VERSION:=4.1.9.1
 PKG_RELEASE=1
 
 PKG_SOURCE_PROTO:=git
@@ -21,7 +22,8 @@ PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 #PKG_SOURCE_VERSION:=05a82afeb6c927bfc0cda4fe8fb25ecc3faecd86
 #PKG_SOURCE_VERSION:=0de5cbaa4becf4eb89245324cb76c9a7c9412a33
 #PKG_SOURCE_VERSION:=85c77a1f856b7538e635b87828c153b4fec76643
-PKG_SOURCE_VERSION:=7825d8627f8be4682167bbe091870edad9dc33b6
+#PKG_SOURCE_VERSION:=7825d8627f8be4682167bbe091870edad9dc33b6
+PKG_SOURCE_VERSION:=eea38e7c9ecb1e1df5e889cb42fc93d3f79d429f
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPL-2.0+
