--- a/package/lean/qBittorrent/Makefile
+++ b/package/lean/qBittorrent/Makefile
@@ -1,30 +1,21 @@
+#
+# Copyright (C) 2017-2019 Entware
+#
+# This is free software, licensed under the GNU General Public License v2.
+# See /LICENSE for more information.
+#
+
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=qBittorrent
-#PKG_VERSION:=4.1.0
-#PKG_VERSION:=4.1.3
-#PKG_VERSION:=4.1.5
-#PKG_VERSION:=4.1.7
-#PKG_VERSION:=4.1.8
-PKG_VERSION:=4.1.9.3
-#PKG_VERSION:=4.1.9
-#PKG_VERSION:=4.1.9.1
+PKG_NAME:=qbittorrent
+PKG_VERSION:=4.1.9
 PKG_RELEASE=1
 
-PKG_SOURCE_PROTO:=git
-#qBittorrent-Enhanced-Edition-4.18.4
-PKG_SOURCE_URL:=https://github.com/hong0980/qBittorrent-Enhanced-Edition.git
-#PKG_SOURCE_URL:=https://github.com/qbittorrent/qBittorrent.git
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-#PKG_SOURCE_VERSION:=e9ed621178af841114a045887c5ce1e6b50cb366
-#PKG_SOURCE_VERSION:=a574c4a70a5a3293d2f6135952c301d930d23627
-#PKG_SOURCE_VERSION:=3f0e0a319a6f4833b238842744ed1f37104fcd4c
-#PKG_SOURCE_VERSION:=05a82afeb6c927bfc0cda4fe8fb25ecc3faecd86
-#PKG_SOURCE_VERSION:=0de5cbaa4becf4eb89245324cb76c9a7c9412a33
-PKG_SOURCE_VERSION:=622227617eb2a8e2ccfeb4314428e7b8f6b98639
-#PKG_SOURCE_VERSION:=7825d8627f8be4682167bbe091870edad9dc33b6
-#PKG_SOURCE_VERSION:=eea38e7c9ecb1e1df5e889cb42fc93d3f79d429f
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE:=$(PKG_NAME)-release-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://codeload.github.com/qbittorrent/qBittorrent/tar.gz/release-$(PKG_VERSION)?
+PKG_HASH:=620127f73f88ed3f2b2e4195cbc641f7c27f967d3b045e45f7916c0995fd61fe
+
+PKG_BUILD_DIR:=$(BUILD_DIR)/qBittorrent-release-$(PKG_VERSION)
 
 PKG_LICENSE:=GPL-2.0+
 PKG_LICENSE_FILES:=COPYING
@@ -35,39 +26,49 @@ PKG_USE_MIPS16:=0
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/qBittorrent
-  SUBMENU:=BitTorrent
-  SECTION:=net
-  CATEGORY:=Network
-  TITLE:=bittorrent client programmed in C++ / Qt
-  URL:=https://www.qbittorrent.org/
-  DEPENDS:=+qt5-core +qt5-network +qt5-xml +rblibtorrent
+define Package/qbittorrent
+	SECTION:=net
+	CATEGORY:=Network
+	SUBMENU:=BitTorrent
+	DEPENDS:=+qt5-core +qt5-network +qt5-xml +rblibtorrent
+	TITLE:=bittorrent client programmed in C++ / Qt
+	URL:=https://www.qbittorrent.org/
+	PROVIDES:=qBittorrent
 endef
 
-define Package/qBittorrent/description
-qBittorrent is a bittorrent client programmed in C++ / Qt that uses 
-libtorrent (sometimes called libtorrent-rasterbar) by Arvid Norberg.
-It aims to be a good alternative to all other bittorrent clients out 
-there. qBittorrent is fast, stable and provides unicode support as 
-well as many features.
+define Package/qbittorrent/description
+  qBittorrent is a bittorrent client programmed in C++ / Qt that uses
+  libtorrent (sometimes called libtorrent-rasterbar) by Arvid Norberg.
+  It aims to be a good alternative to all other bittorrent clients out
+  there. qBittorrent is fast, stable and provides unicode support as
+  well as many features.
 endef
 
-CONFIGURE_VARS += \
-	QT_QMAKE="$(TOOLCHAIN_DIR)/bin" \
-	PKG_CONFIG_PATH="$(TOOLCHAIN_DIR)/lib/pkgconfig"
+#CONFIGURE_VARS += \
+#	QT_QMAKE="$(STAGING_DIR)/usr/bin" \
+#	PKG_CONFIG_PATH="$(STAGING_DIR)/usr/lib/pkgconfig"
 
 CONFIGURE_ARGS += \
 	--disable-gui \
+	--enable-stacktrace=no \
 	--with-boost=$(STAGING_DIR)/usr
 
 MAKE_VARS += \
 	INSTALL_ROOT="$(PKG_INSTALL_DIR)"
 
-define Package/qBittorrent/install
-	$(INSTALL_DIR) $(1)/usr/man/man1
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/man/man1/qbittorrent-nox.1 $(1)/usr/man/man1/qbittorrent-nox.1
-	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/qbittorrent-nox $(1)/usr/bin
+define Build/Prepare
+	$(call Build/Prepare/Default)
+	$(SED) '/<context>/{:a;N;/<\/context>/!ba;/\/gui\//d}' `ls $(PKG_BUILD_DIR)/src/lang/qbittorrent_*.ts`
 endef
 
-$(eval $(call BuildPackage,qBittorrent))
+define Package/qbittorrent/install
+	$(INSTALL_DIR) $(1)/usr/bin $(1)/usr/man/man1
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/man/man1/qbittorrent-nox.1 $(1)/usr/man/man1/qbittorrent-nox.1
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/qbittorrent-nox $(1)/usr/bin
+#	$(INSTALL_DIR) $(1)/etc/init.d $(1)/etc/config
+#	$(INSTALL_BIN) ./files/qbittorrent.init $(1)/etc/init.d/qbittorrent
+#	$(INSTALL_CONF) ./files/qbittorrent.conf $(1)/etc/config/qbittorrent
+
+endef
+
+$(eval $(call BuildPackage,qbittorrent))
