--- a/package/lean/qt5/Makefile
+++ b/package/lean/qt5/Makefile
@@ -84,12 +84,11 @@ CONFIGURE_ARGS = \
 		-system-pcre \
 		-system-zlib \
 		-no-slog2 \
-		-openssl-runtime \
+		-openssl-linked \
 		-no-cups \
 		-no-freetype \
 		-no-harfbuzz \
 		-no-gtk \
-		-no-openssl \
 		-no-opengl \
 		-no-opengles3 \
 		-no-angle \
