--- a/package/lean/qBittorrent/Makefile
+++ b/package/lean/qBittorrent/Makefile
@@ -4,11 +4,10 @@ PKG_NAME:=qbittorrent
 PKG_VERSION:=4.2.1
 PKG_RELEASE=5
 
-PKG_SOURCE:=$(PKG_NAME)-release-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://codeload.github.com/qbittorrent/qBittorrent/tar.gz/release-$(PKG_VERSION)?
-PKG_HASH:=723E68807FF0FAFFDA68ED95B515D31ABD23A667D949BDDF0021AD81F7400A1F
-
-PKG_BUILD_DIR:=$(BUILD_DIR)/qBittorrent-release-$(PKG_VERSION)
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_URL:=https://github.com/qbittorrent/qbittorrent.git
+PKG_SOURCE_VERSION:=118af03534e5ded6d3c8323b5dbeeff57b177193
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPL-2.0+
 PKG_LICENSE_FILES:=COPYING
