--- a/package/hong/luci-app-diskman/Makefile
+++ b/package/hong/luci-app-diskman/Makefile
@@ -1,7 +1,11 @@
+# Copyright (C) 2019 Openwrt.org
+#
+# This is free software, licensed under the Apache License, Version 2.0 .
+#
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=luci-app-diskman
+LUCI_TITLE:=LuCI support for diskman
 LUCI_DEPENDS:=+e2fsprogs +parted +smartmontools +blkid +btrfs-progs
 PKG_VERSION:=v0.0.2
 PKG_RELEASE:=beta
