--- a/package/hong/luci-app-dockerman/Makefile
+++ b/package/hong/luci-app-dockerman/Makefile
@@ -10,6 +10,8 @@ LUCI_PKGARCH:=all
 PKG_VERSION:=v0.1.7
 PKG_RELEASE:=beta
 
+include $(INCLUDE_DIR)/package.mk
+
 PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-dockerman>
 
 include $(TOPDIR)/feeds/luci/luci.mk
