--- a/package/hong/luci-app-dockerman/Makefile
+++ b/package/hong/luci-app-dockerman/Makefile
@@ -8,8 +8,8 @@ include $(TOPDIR)/rules.mk
 LUCI_TITLE:=Docker Manager interface for LuCI
 LUCI_DEPENDS:=+luci-lib-docker +docker-ce +luci-lib-json
 LUCI_PKGARCH:=all
-PKG_VERSION:=v0.1.7
-PKG_RELEASE:=20200104
+PKG_VERSION:=0.1.7
+PKG_RELEASE:=1
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
