--- a/package/hong/luci-app-docker/Makefile
+++ b/package/hong/luci-app-docker/Makefile
@@ -7,6 +7,8 @@ include $(TOPDIR)/rules.mk
 LUCI_TITLE:=LuCI support for the Docker
 LUCI_DEPENDS:=+docker-ce +luci-lib-json
 LUCI_PKGARCH:=all
+PKG_VERSION:=0.1.7
+PKG_RELEASE:=1
 
 PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-dockerman>
 
