--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -73,7 +73,7 @@ jobs:
       if: always()
       with:
         name: OpenWrt_bin
-        path: ./bin/
+        path: lede/bin
 
     - name: 固件打包
       if: always()
