--- a/package/hong/luci-app-clash/Makefile
+++ b/package/hong/luci-app-clash/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk 
 
 PKG_NAME:=luci-app-clash
-PKG_VERSION:=1.4.1
+PKG_VERSION:=1.4.2
 #PKG_RELEASE:=3
 PKG_MAINTAINER:=frainzy1477
 
@@ -13,7 +13,7 @@ define Package/luci-app-clash
 	CATEGORY:=LuCI
 	SUBMENU:=2. Clash
 	TITLE:=LuCI app for clash
-	DEPENDS:=+luci +luci-base +wget +iptables +coreutils-base64 +coreutils +coreutils-nohup +bash +ipset +libustream-openssl +libopenssl +openssl-util
+	DEPENDS:=+luci +luci-base +wget +iptables +coreutils-base64 +coreutils +coreutils-nohup +bash +ipset +libustream-openssl +libopenssl +openssl-util +kmod-tun
 	PKGARCH:=all
 	MAINTAINER:=frainzy1477
 endef
@@ -39,6 +39,7 @@ define Package/$(PKG_NAME)/preinst
 #!/bin/sh
 
 mkdir -p /usr/share/clashbackup 2>/dev/null
+
 
 if [ -f "/tmp/dnsmasq.d/custom_list.conf" ]; then
 	rm -rf /tmp/dnsmasq.d/custom_list.conf 2>/dev/null
@@ -116,6 +117,10 @@ fi
 if [ -f "/etc/init.d/clash" ]; then
 	/etc/init.d/clash disable 2>/dev/null
 fi
+
+
+mkdir -p /etc/clash/clashtun 2>/dev/null
+
 
 endef
 
