--- a/package/hong/luci-app-clash/root/usr/share/clash/dns.yaml
+++ b/package/hong/luci-app-clash/root/usr/share/clash/dns.yaml
@@ -1,3 +1,4 @@
+
 experimental:
   ignore-resolve-fail: true
 #authentication:
@@ -10,9 +11,9 @@ dns:
  listen: 0.0.0.0:5300
  enhanced-mode: fake-ip
  fake-ip-range: 198.18.0.1/16
- # fake-ip-filter: # fake ip white domain
- #   - *.lan
- #   - localhost.ptlogin2.qq.com
+#fake-ip-filter:
+# - '*.lan'
+# - localhost.ptlogin2.qq.com
  nameserver:  
   - 114.114.114.114    
   - tls://118.89.110.78:853
